added delete button to pending members view

--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -145,6 +145,6 @@
 <hr />
 
   <div class="actions" style="text-align: center;">
-    <%= f.submit :data => { :disable_with => "Submitting..." } %>
+    <%= f.submit :data => { :disable_with => "Submitting..." },:class => "btn-default btn btn-big btn-primary" %>
   </div>
 <% end %>
