--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,8 +1,8 @@
  <% last_payment = "" %>
 
-<div class="form_row">
+<div class="row">
 
-<div class="form_cell" style="width: 55%; border-right: 1px solid #ddd;">
+<div class="form_cell">
 
 <p><strong><%= @member.first_name %> <%= @member.last_name %></strong></br />
 <%= @member.street_1 %>
@@ -81,12 +81,27 @@
 </tr>
 <% end %>
 </table>
+<br />
+<%= button_to "Send Dues Reminder", send_dues_reminder_path(:id => last_payment), :class => "btn-default btn btn-primary" %>
 
-<%= button_to "Send Dues Reminder", send_dues_reminder_path(:id => last_payment) %>
 
-
-<% if current_user.roles.any? {|role| role.name == "superuser" or role.name == "admin"} %>
-  <%= render 'versions', :member => @member %>
+<hr />
+<% if signed_in?%>
+  <% if current_user.roles.any? {|role| role.name == "superuser" or role.name == "admin"} %>
+    <div class="admin-section" >
+      <div class='row'>
+        <div class='col-sm-12'>
+            <p class="admin_heading">Admin</p>
+            <p class="form_note admin_heading">You are seeing this admin area because you are logged in with admin privileges.</p>
+            <div class='row' style="padding-top:1em;">
+              <div class="col-xs-4">
+                <%= button_to 'Edit Member', edit_member_path(@member), method: :get, :class => "btn-default btn" %>
+              </div>
+            </div>
+        </div>
+        <%= render 'versions', :member => @member %>
+      </div>
+    </div> 
+  <% end %>
 <% end %>
-<%= link_to 'Edit', edit_member_path(@member) %> |
-<%= link_to 'Back', members_path %>
+
