updated dues_reminders_list format

--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -307,6 +307,10 @@ td {
   padding: 0.4em;
 }
 
+.smaller-table * td,th {
+font-size: 0.75em;
+}
+
 /* =calendar items
 -------------------------------------------------------------- */
 
