added renew membership link to member homepage

--- a/app/views/pages/member_home.html.erb
+++ b/app/views/pages/member_home.html.erb
@@ -13,7 +13,7 @@
   <% if (@dues_paid.date_paid + 1.year) > DateTime.now %><div class="dues_current">CURRENT</div><%else %><div class="dues_not_current">NOT CURRENT</div><% end %>
   
   <p>Current records indicate you last paid dues: <strong><%= @dues_paid.date_paid.strftime("%b %d, %Y") %></strong>. If you feel this is in error, please contact the Finance Officer.</p>
-  
+  <p><%= link_to "Renew Membership Online", membership_path %></p>
 </div>
 <div class="col-sm-6">
   <h2>Recent Meeting Minutes:</h2>
