updated and refined adding Rides

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -5,8 +5,8 @@
 
   <div><%= f.label :email %><br />
   <%= f.email_field :email %></div>
-
-  <div><%= f.submit "Send me reset password instructions" %></div>
+  <br />
+  <div><%= f.submit "Send me reset password instructions", :class => "btn-default btn btn-big btn-primary" %></div>
 <% end %>
 
 <p>Requesting to reset your password will generate an email with instructions on how to reset your password.</p>
