--- a/app/views/lhfe_flights/index.html.erb
+++ b/app/views/lhfe_flights/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Listing LHFE Flights</h1>
-<p><%= link_to 'New Flight', new_lhfe_flight_path %> </p>
+<p><%= button_to 'Schedule Flight', new_lhfe_flight_path, :class => "btn-default btn btn-big btn-primary" %> </p>
 
 <table class="table_border">
   <tr>
