--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -604,6 +604,11 @@ cursor: default;
   margin: 1em auto;
   border: 1px solid #000;
   }
+  
+.center {
+  display: block;
+  margin: 0.5em auto;
+}
 
 /* =Full Size
 -------------------------------------------------------------- */
