--- a/app/views/lhfe_flights/_scripts.html.erb
+++ b/app/views/lhfe_flights/_scripts.html.erb
@@ -1,10 +1,5 @@
 <script>
-  $(function() {
-    $( "#lhfe_rider_ride_date" ).datepicker({
-     dateFormat:"yy-mm-dd",
-     changeYear: true, ## if you want a year dropdown
-    });
-  });
+
 
 jQuery(function($){
 
@@ -13,5 +8,13 @@ jQuery(function($){
 
 });
 
+
+
+  $(function() {
+    $( "#lhfe_flight_flight_start_time" ).datetimepicker({
+     format:'Y-m-d H:i:00',
+     step:15
+    });
+  });
 
 </script>
