added code to allow flight roster for Special Events

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -253,7 +253,7 @@
 
       <% end %>
     <% else %>
-    <% if @event.event_type_id == 2 %>
+    <% if @event.event_type_id == 2 or @event.event_type_id == 3 %>
 
 <div class="signup_box" style = "border: 1px solid #999;padding:0 0.5em 0.5em;background: #eee; border-radius: 3px; margin-bottom: 1em;">
 <p>Put me on the signup list for this airshow:</p>
