--- a/app/views/lhfe_flights/living_history_flight_experience.html.erb
+++ b/app/views/lhfe_flights/living_history_flight_experience.html.erb
@@ -10,48 +10,86 @@
     <br />
 <% end %>
 
-<h2 style="background: #cc0000; color: #eee; margin: 0 0 0 0; padding: 0.75em;">Upcoming Flight Opportunities</h2>
+<div class="row" style="margin: none;">
+<div class="col-sm-8" style = "border: 1px solid black;">
+<h2 style="background: #cc0000; color: #eee; margin: 0 -15px 0 -15px; padding: 0.75em;">Upcoming Flight Opportunities</h2>
 
 <p style="margin: 0.75em;">Rides booked in advance are <%= number_to_currency(@price.value, :precision => 0) %>, and normally <%= number_to_currency(@price.alt_value, :precision => 0) %> at the events (event pricing may vary).
 
-<table class="table_border">
+<div class="row" style="border-top: 1px solid black;">
 <% @rides.each do |ride| %>
-  <tr class="<%= cycle('odd_row', 'even_row') %>">
-    <td><strong><%= ride.title %></strong><br />
+
+<div class="col-xs-12 <%= cycle('odd_row', 'even_row') %>" style = "padding: 1em;border-bottom: 1px solid black;">
+    <strong><%= ride.title %></strong><br />
     <% if ride.start.strftime("%b %d" ) == ride.end.strftime("%b %d") %>
-      <%= ride.start.strftime("%b %d, %y") %>
+      <p><%= ride.start.strftime("%b %d, %y") %></p>
+      <% display_time = ride.start.strftime("%b %d, %y") %>
     <% else %>
-      <%= ride.start.strftime("%b %d") %> - <%= ride.end.strftime("%d, %y") %>
+     <p> <%= ride.start.strftime("%b %d") %> - <%= ride.end.strftime("%d, %y") %></p>
+     <% display_time = ride.start.strftime("%b %d") + ' - ' + ride.end.strftime("%d, %y") %>
     <% end %>
-    <br />
-  <%= ride.location.city %>, <%= ride.location.state %>
-  <div style="float:right; margin: 0.25em 0 0 0.25em;">
+  <p><%= ride.location.city %>, <%= ride.location.state %></p>
+
+<% if ride.lhfe_flights.any? %>
+  <div><span style="font-weight: bold">Flight Times</span> <span style="font-size: 0.75em; font-style: italic;">Times are subject to change</span></div>
+  <div class="row">
+
+  <% ride.lhfe_flights.each do |flight| %>
+  <div class="col-xs-11 col-xs-offset-1" style = "padding: 0.75em;">
+  <p><%= flight.flight_start_time.strftime("%a, %b %d @ %l:%M %p") %></p>
   <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-
   <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_SM.gif" border="0" name="submit" alt="Make payments with PayPal - it's fast, free and secure!">
-<img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
-<input type="hidden" name="add" value="1">
-<input type="hidden" name="cmd" value="_cart">
-<input type="hidden" name="business" value="px_info@devildogsquadron.com">
-<input type="hidden" name="item_name" value="Living History Flight Experience - Prepay | <%= ride.title %>">
-<input type="hidden" name="item_number" value="100">
-<input type="hidden" name="amount" value="<%= @price.value %>">
-<input type="hidden" name="page_style" value="Primary">
-<input type="hidden" name="shipping" value="0">
-<input type="hidden" name="no_shipping" value="2">
-<input type="hidden" name="no_note" value="1">
-<input type="hidden" name="currency_code" value="USD">
-<input type="hidden" name="lc" value="US">
-<input type="hidden" name="bn" value="PP-ShopCartBF">
+  <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
+  <input type="hidden" name="add" value="1">
+  <input type="hidden" name="cmd" value="_cart">
+  <input type="hidden" name="business" value="px_info@devildogsquadron.com">
+  <input type="hidden" name="item_name" value="Living History Flight Experience - Prepay | <%= ride.title + ' ' + flight.flight_start_time.strftime("%A %b %d, %y @ %l:%M %p").to_s %>">
+  <input type="hidden" name="item_number" value="100">
+  <input type="hidden" name="amount" value="<%= @price.value %>">
+  <input type="hidden" name="page_style" value="Primary">
+  <input type="hidden" name="shipping" value="0">
+  <input type="hidden" name="no_shipping" value="2">
+  <input type="hidden" name="no_note" value="1">
+  <input type="hidden" name="currency_code" value="USD">
+  <input type="hidden" name="lc" value="US">
+  <input type="hidden" name="bn" value="PP-ShopCartBF">
+  </form>
+  </div>
+  <% end %>
+  </div>
 
-</form></div></td>
-</tr>
+<% else %>
+  <div class="col-xs-11 col-xs-offset-1" style = "padding: 0.75em;">
+  <p style="font-size: 0.75em; font-style: italic;">Flight times not set for this event, you will be contacted when times are set.</p>
+  <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+  <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_SM.gif" border="0" name="submit" alt="Make payments with PayPal - it's fast, free and secure!">
+  <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
+  <input type="hidden" name="add" value="1">
+  <input type="hidden" name="cmd" value="_cart">
+  <input type="hidden" name="business" value="px_info@devildogsquadron.com">
+  <input type="hidden" name="item_name" value="Living History Flight Experience - Prepay | <%= ride.title + ' ' + display_time + ' flight time TBD'%>">
+  <input type="hidden" name="item_number" value="100">
+  <input type="hidden" name="amount" value="<%= @price.value %>">
+  <input type="hidden" name="page_style" value="Primary">
+  <input type="hidden" name="shipping" value="0">
+  <input type="hidden" name="no_shipping" value="2">
+  <input type="hidden" name="no_note" value="1">
+  <input type="hidden" name="currency_code" value="USD">
+  <input type="hidden" name="lc" value="US">
+  <input type="hidden" name="bn" value="PP-ShopCartBF">
+  </form>
+  </div>
 <% end %>
-</table>
+
+</div>
+<% end %>
+
+</div>
 
 <p style="margin: 0.75em;"><%= link_to "Refund Policy", refund_policy_path %>.</p>
 
 <p style="margin: 0.75em;">Not ready to make a reservation, but would like more information? Enter a <%= link_to "Ride Request", new_ride_request_path %>.</p>
-
 </div>
+</div>
+
 
