--- a/app/views/lhfe_riders/_form.html.erb
+++ b/app/views/lhfe_riders/_form.html.erb
@@ -15,28 +15,34 @@
 
     <div class="field">
       <%= f.label :event_id, "Event" %><br />
-      <%= f.collection_select :event_id, Event.reverse.all, :id, :event_date, options = {:order => 'event_date ASC', :prompt => true}, html_options = {:class => "styled-select"} %>
+      <%= f.collection_select :event_id, Event.recent.air_show.all, :id, :event_date, options = {:order => 'event_date ASC', :prompt => true, :selected => params['event_id']}, html_options = {:class => "styled-select"} %>
+
     </div>
-  <div class="field">
+<div class="row">
+  <div class="col-sm-4 field">
     <%= f.label :ride_date %><br />
     <%= f.text_field :ride_date %>
   </div>
-  <div class="field">
+  <div class="col-sm-4 field">
     <%= f.label :payment_amount %><br />
     <%= f.text_field :payment_amount %>
   </div>
-  <div class="field">
+  <div class="col-sm-4 field">
     <%= f.label :payment_type %><br />
     <%= f.text_field :payment_type %>
   </div>
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name %>
-  </div>
-  <div class="field">
+</div>
+<div class="row">
+  <div class="col-sm-6 field">
     <%= f.label :first_name %><br />
-    <%= f.text_field :first_name %>
+    <%= f.text_field :first_name, :class =>"boxsizingBorder" %>
   </div>
+  <div class="col-sm-6 field">
+    <%= f.label :last_name %><br />
+    <%= f.text_field :last_name, :class =>"boxsizingBorder" %>
+  </div>
+</div>
+
   <div class="field">
     <%= f.label :street_1 %><br />
     <%= f.text_field :street_1 %>
@@ -45,51 +51,57 @@
     <%= f.label :street_2 %><br />
     <%= f.text_field :street_2 %>
   </div>
-  <div class="field">
+<div class="row">
+  <div class="col-sm-4 field">
     <%= f.label :city %><br />
     <%= f.text_field :city %>
   </div>
-  <div class="field">
+  <div class="col-sm-4 fieldfield">
     <%= f.label :state %><br />
     <%= f.text_field :state %>
   </div>
-  <div class="field">
+  <div class="col-sm-4 fieldfield">
     <%= f.label :zip %><br />
     <%= f.text_field :zip %>
   </div>
-  <div class="field">
+</div>
+<div class="row">
+  <div class="col-sm-4 field">
     <%= f.label :home_phone %><br />
     <%= f.text_field :home_phone %>
   </div>
-  <div class="field">
+  <div class="col-sm-4 field">
     <%= f.label :work_phone %><br />
     <%= f.text_field :work_phone %>
   </div>
-  <div class="field">
+  <div class="col-sm-4 field">
     <%= f.label :email %><br />
     <%= f.text_field :email %>
   </div>
-  <div class="field">
+</div>
+<div class="row">
+  <div class="col-sm-3 field">
     <%= f.label 'DOB', :dob %><br />
-    <%= f.text_field :dob %>
+    <%= f.text_field :dob, :class =>"boxsizingBorder" %>
   </div>
-  <div class="field">
-    <%= f.label :married %><br />
-    <%= f.check_box :married %>
-  </div>
-  <div class="field">
-    <%= f.label :spouse_name %><br />
-    <%= f.text_field :spouse_name %>
-  </div>
-  <div class="field">
+  <div class="col-sm-1 field">
     <%= f.label :gender %><br />
     <%= f.select :gender, options_for_select([["n/a"], ["Female"], ["Male"]]) %>
   </div>
-  <div class="field">
-    <%= f.label :occupation %><br />
-    <%= f.text_field :occupation %>
+  <div class="col-sm-2 field">
+    <%= f.label :married %><br />
+    <%= f.check_box :married %>
   </div>
+  <div class="col-sm-3 field">
+    <%= f.label :spouse_name %><br />
+    <%= f.text_field :spouse_name, :class =>"boxsizingBorder" %>
+  </div>
+  <div class="col-sm-3 field">
+    <%= f.label :occupation %><br />
+    <%= f.text_field :occupation, :class =>"boxsizingBorder" %>
+  </div>
+</div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Create LHFE Rider", :data => { :disable_with => "Submitting..." },:class => "btn-default btn btn-big btn-primary" %>
   </div>
 <% end %>
