--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -238,7 +238,8 @@
 
 
 <% if signed_in?%>
-
+<fieldset>
+<legend>&nbsp;Flight Sign Up&nbsp;</legend>
 <div class="col-xs-12">
   <% if current_user.roles.any? {|role| role.name == "admin" or role.name == "member"} %>
     <% @members_array = @event.event_signups.map{|x| x[:member_id]} %>
@@ -256,7 +257,7 @@
     <% if @event.event_type_id == 2 or @event.event_type_id == 3 %>
 
 <div class="signup_box" style = "border: 1px solid #999;padding:0 0.5em 0.5em;background: #eee; border-radius: 3px; margin-bottom: 1em;">
-<p>Put me on the signup list for this airshow:</p>
+<p>Put me on the flight sign up list for this airshow:</p>
   <% if current_user.roles.any? {|role| role.name == "superuser" or role.name == "member"} %>
 <div class='row'>
   <div class="col-xs-6 col-sm-3 col-sm-offset-3 col-md-3 col-md-offset-4">
@@ -329,23 +330,28 @@
       <p><%= email_addresses %></p>
 <% end %>
 <% end %>
+</fieldset>
+<div style="margin: 1em;">&nbsp;</div>
 
 <% if @event.rsvp == true  %>
+<fieldset>
+<legend>&nbsp;RSVP (Not Flying)&nbsp;</legend>
 <% if current_user %>
-<div class="signup_box">
-<h3>RSVP for this event (not flying):</h3>
+<div class="signup_box" style = "border: 1px solid #999;padding:0 0.5em 0.5em;background: #eee; border-radius: 3px; margin-bottom: 1em;">
   <% if current_user.roles.any? {|role| role.name == "superuser" or role.name == "member"} %>
+<p>Put me on the RSVP list for this event:</p>
+<p style="font-style: italic;font-size:0.85em;">RSVP lists are for events that are non flying local events, or for airshow events that you are arranging your own separate transportation in order to support the squadron and participate.</p>
 <div class='row'>
-  <div class="col-xs-4  col-xs-offset-2 col-sm-2 col-sm-offset-0">
+  <div class="col-xs-6 col-sm-3 col-sm-offset-3 col-md-3 col-md-offset-4">
     <%= button_to 'Definite', {:controller => :attendances, :action => :signup, :member_id => current_user.member, :event_id => @event.id, :commitment_level => 'Definite', :position => 0 },:class => "btn-default btn btn-big btn-success" %>
   </div>
-  <div class="col-xs-6 col-sm-2">
+  <div class="col-xs-6 col-sm-3">
       <%= button_to 'Maybe',    {:controller => :attendances, :action => :signup, :member_id => current_user.member, :event_id => @event.id, :commitment_level => 'Maybe', :position => 0 },:class => "btn-default btn btn-big btn-warning" %>
   </div>
 </div>
 <% end %>
 
-<p style="font-style: italic;font-size:0.85em;">Your name will be entered on the (non-flying) list below, you can change your commitment or remove yourself at any time. Signing up only indicates your availability and desire to participate. Final roster at discretion of pilots.</p>
+<p style="font-style: italic;font-size:0.85em;">Your name will be entered on the (non-flying) list below, you can change your commitment or remove yourself at any time. Signing up only indicates your availability and desire to participate.</p>
 </div>
 
 <p>Total RSVPs: <%= @event.attendances.size %> - Definite: <%= @event.attendances.definite.size %>
@@ -383,3 +389,4 @@
 
 <% end %>
 <% end %>
+</fieldset>
