--- a/app/views/roster_notifier/created.text.erb
+++ b/app/views/roster_notifier/created.text.erb
@@ -1,6 +1,6 @@
 <%= @event_signup.member.first_name %>, 
 
-Your <%= @event_signup.event.title %> Sign Up has been recorded on the website.
+Your <%= @event_signup.event.title %> Flight Sign Up has been recorded on the website.
 
 <%= @event_signup.event.title %>
 <% if @event_signup.event.start.strftime("%b %d" ) == @event_signup.event.end.strftime("%b %d") %>
