--- a/app/views/lhfe_flights/_form.html.erb
+++ b/app/views/lhfe_flights/_form.html.erb
@@ -16,7 +16,7 @@
 <div class="row">
 
   <div class="field col-xs-12">
-    <%= f.label :flight_start_time %><br />
+    <%= f.label :flight_start_time, "Flight Time" %><br />
     <%= f.text_field :flight_start_time, :value => f.object.try(:flight_start_time).try(:strftime,'%Y-%m-%d %H:%M:%S'), :size => 20 %>
   </div>
 
